# models/artist.go
@@ -6,11 +6,11 @@ import (
 )
 
 type Artist struct {
-	gorm.Model        // using property gorm.Model automatically will be included: id, createdAt, updatedAt, deletedAt.
-	Name       string `json:"name" validate:"required"`
-	Album      string `json:"album"`
-	Released   string `json:"released"`
-	Country    string `json:"country"`
+	gorm.Model `swaggerignore:"true"` // using property gorm.Model automatically will be included: id, createdAt, updatedAt, deletedAt.
+	Name       string                 `json:"name" validate:"required"`
+	Album      string                 `json:"album"`
+	Released   string                 `json:"released"`
+	Country    string                 `json:"country"`
 }
 
 func ValidateArtist(artist *Artist) error {
